Bug 276757 - [Flex] Fix css/css-flexbox/align-items-baseline-column-vert.html
Summary: [Flex] Fix css/css-flexbox/align-items-baseline-column-vert.html
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Layout and Rendering (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: zalan
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2024-07-17 20:22 PDT by zalan
Modified: 2024-07-20 18:14 PDT (History)
11 users (show)

See Also:


Attachments
Patch (1.67 KB, patch)
2024-07-17 20:30 PDT, zalan
no flags Details | Formatted Diff | Diff
Patch (16.54 KB, patch)
2024-07-20 10:05 PDT, zalan
no flags Details | Formatted Diff | Diff
Patch (29.44 KB, patch)
2024-07-20 13:27 PDT, zalan
ews-feeder: commit-queue-
Details | Formatted Diff | Diff
[fast-cq]Patch (30.92 KB, patch)
2024-07-20 14:51 PDT, zalan
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description zalan 2024-07-17 20:22:58 PDT
ssia
Comment 1 zalan 2024-07-17 20:30:25 PDT
Created attachment 471913 [details]
Patch
Comment 2 zalan 2024-07-20 10:05:11 PDT
Created attachment 471921 [details]
Patch
Comment 3 zalan 2024-07-20 13:27:12 PDT
Created attachment 471922 [details]
Patch
Comment 4 zalan 2024-07-20 14:51:42 PDT
Created attachment 471923 [details]
[fast-cq]Patch
Comment 5 EWS 2024-07-20 18:13:43 PDT
Committed 281168@main (fa4ff92490ae): <https://commits.webkit.org/281168@main>

All reviewed patches have been landed. Closing bug and clearing flags on attachment 471923 [details].
Comment 6 Radar WebKit Bug Importer 2024-07-20 18:14:13 PDT
<rdar://problem/132169635>