[Flex] Fix css/css-flexbox/align-items-baseline-column-vert.html https://bugs.webkit.org/show_bug.cgi?id=276757

Reviewed by Antti Koivisto.

Remove legacy behavior (changed at https://drafts.csswg.org/css-flexbox-1/#change-2016-baseline-alignment)

(Sadly while we match other browsers now, css/css-flexbox/align-items-baseline-column-vert.html still fails as the ref side uses grid)

* LayoutTests/TestExpectations:
* Source/WebCore/rendering/RenderFlexibleBox.cpp:
(WebCore::RenderFlexibleBox::alignmentForFlexItem const):

Canonical link: https://commits.webkit.org/281168@main